--- a/src/styles.css
+++ b/src/styles.css
@@ -80,15 +80,16 @@
 .add-group-btn {
   background: #007bff;
   color: white;
-  font-size: 24px;
+  font-size: 35px;
+  font-weight: 600;
   padding: 8px;
   border: none;
   border-radius: 50%;
   cursor: pointer;
   margin-top: auto;
-  align-self: center;
-  width: 50px;
-  height: 50px;
+  align-self: flex-end;
+  width: 60px;
+  height: 60px;
 }
 
 /* Notes Section */
